--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "chart.js": "^4.4.9",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "lucide-react": "^0.508.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
