--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
+    "react-model": "^4.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3"
   },
