--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^7.5.3",
     "react-slick": "^0.30.3",
     "recharts": "^2.15.3",
+    "rsuite": "^5.80.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
